--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "alembic (>=1.16.2,<2.0.0)",
     "fastapi[standard] (>=0.115.14,<0.116.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
-    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
     "psycopg[binary] (>=3.2.9,<4.0.0)",
     "tzdata (>=2025.2,<2026.0)"
 ]
@@ -25,6 +25,7 @@ httpx = "^0.28.1"
 factory-boy = "^3.3.3"
 freezegun = "^1.5.2"
 testcontainers = "^4.10.0"
+pytest-asyncio = "^1.1.0"
 
 [tool.ruff]
 line-length = 120
@@ -41,7 +42,10 @@ quote-style = 'double'
 [tool.pytest.ini_options]
 pythonpath = "."
 addopts = '-p no:warnings'
+asyncio_default_fixture_loop_scope = 'function'
 
+[tool.coverage.run]
+concurrency = ["thread", "greenlet"]
 
 [tool.taskipy.tasks]
 lint = 'ruff check'
