--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -56,6 +56,9 @@ pre_test = 'task lint'
 test = 'pytest -s -x --cov=trip_packer -vv'
 post_test = 'coverage html'
 
+[tool.poetry]
+packages = [{ include = "trip_packer" }]
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
