feat: integrate frontend and backend with Docker
This commit introduces the necessary changes to allow the frontend and backend to communicate within a Docker environment.

- Refactored the FastAPI application to include an `/api` prefix for all routes, standardizing the API endpoints.
- Configured the frontend to use a relative path for API requests, pointing to the new `/api` prefix.
- Implemented a multi-stage Docker build for the frontend using Nginx as a reverse proxy to serve the static files and forward API requests to the backend.
- Updated the `docker-compose.yml` to orchestrate the new frontend and backend setup, exposing the frontend on port 80.
- Removed the `setupProxy.js` file from the frontend, as it is no longer needed with the Nginx reverse proxy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+networks:
+  trip_packer_network:
+    driver: bridge
+
 services:
   trip_packer_database:
     image: postgres
@@ -11,6 +15,8 @@ services:
       POSTGRES_PASSWORD: app_password
     ports:
       - "5432:5432"
+    networks:
+      - trip_packer_network
 
   trip_packer_app:
     image: trip_packer_app
@@ -24,19 +30,19 @@ services:
     environment:
       DATABASE_URL: postgresql+psycopg://app_user:app_password@trip_packer_database:5432/app_db
     entrypoint: ./entrypoint.sh
+    networks:
+      - trip_packer_network
 
   trip_packer_frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "80:80"
     depends_on:
       - trip_packer_app
-    environment:
-      REACT_APP_BACKEND_URL: http://trip_packer_app:8000
-    # Command to start the React development server
-    command: npm start
+    networks:
+      - trip_packer_network
 
 volumes:
   pgdata:
