--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,14 @@
-FROM node:20-alpine
-
+# build environment
+FROM node:20-alpine as build
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm install
+COPY . ./
+RUN npm run build
 
-COPY . .
-
-EXPOSE 3000
-
-CMD ["npm", "start"]
+# production environment
+FROM nginx:stable-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
