feat: Update frontend types and Dockerfile for backend compatibility
This commit updates the frontend to align with the backend API schemas.

Key changes include:
- **Type Definitions:** Modified  to reflect backend uid=501(ricardofv) gid=20(staff) groups=20(staff),12(everyone),61(localaccounts),79(_appserverusr),80(admin),81(_appserveradm),98(_lpadmin),701(com.apple.sharepoint.group.1),33(_appstore),100(_lpoperator),204(_developer),250(_analyticsusers),395(com.apple.access_ftp),398(com.apple.access_screensharing),399(com.apple.access_ssh),400(com.apple.access_remote_ae) as , and updated , , , , and  interfaces to match backend response structures. Added , , , , , , , , and  interfaces.
- **API Service:** Updated  to use the new type definitions and uid=501(ricardofv) gid=20(staff) groups=20(staff),12(everyone),61(localaccounts),79(_appserverusr),80(admin),81(_appserveradm),98(_lpadmin),701(com.apple.sharepoint.group.1),33(_appstore),100(_lpoperator),204(_developer),250(_analyticsusers),395(com.apple.access_ftp),398(com.apple.access_screensharing),399(com.apple.access_ssh),400(com.apple.access_remote_ae) type for all API calls.
- **Repository Services:** Updated  files to use the new type definitions and uid=501(ricardofv) gid=20(staff) groups=20(staff),12(everyone),61(localaccounts),79(_appserverusr),80(admin),81(_appserveradm),98(_lpadmin),701(com.apple.sharepoint.group.1),33(_appstore),100(_lpoperator),204(_developer),250(_analyticsusers),395(com.apple.access_ftp),398(com.apple.access_screensharing),399(com.apple.access_ssh),400(com.apple.access_remote_ae) type.
- **Frontend Pages:** Modified , , , and  to use the updated types and handle uid=501(ricardofv) gid=20(staff) groups=20(staff),12(everyone),61(localaccounts),79(_appserverusr),80(admin),81(_appserveradm),98(_lpadmin),701(com.apple.sharepoint.group.1),33(_appstore),100(_lpoperator),204(_developer),250(_analyticsusers),395(com.apple.access_ftp),398(com.apple.access_screensharing),399(com.apple.access_ssh),

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN rm -rf node_modules package-lock.json && npm install
 
 COPY . .
 
-EXPOSE 5173
+EXPOSE 8080
 
 CMD ["npm", "run", "dev"]
